example/lib/src/generated/errors/errors_localization_es.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Spanish Castilian (`es`).
class ErrorsLocalizationEs extends ErrorsLocalization {
  ErrorsLocalizationEs([String locale = 'es']) : super(locale);

  @override
  String get error => 'Ocurrió un error';

  @override
  String get unexpectedError => 'Ocurrió un error inesperado';

  @override
  String get bugReportSentText => 'Informe de error enviado con éxito.';
}
